src/content/0.9.5/lessons/ex-crypto/5.md
## 5. Creating Rules - Part 1

As discussed in the last section, we're going to place the following restrictions on the predicates in the `wallet` collection:

- `wallet/name` - only the owner of the wallet can edit
- `wallet/balance` - anyone can edit
- `wallet/user` - no one can edit. 

The first thing that we need to do is create a smart function that checks if the auth making the update `(?auth_id)` is the owner of the wallet. 

We'll need to use the following built-in function:
- `(?s)` : gets all the predicates for the subject being updated, returns in the form of a map. We can also specify additional predicates (following the graph). Here we'll use: `(?s \"[{wallet/user [{_user/auth [_id]}] }]\")`
- `(?auth_id)` : Returns the `_auth` of the user making the update.
- `(get-all X Y)` : Gets all of a certain predicate (or predicate-path), `Y` from an subject, `X`, returns a set or nil. For example, assuming `(?s)` is a person we are updating. `(get-all (?s) [\"person/chat\" \"_id\"])` gets the `_id`s for all `chats` records referenced in `person/chat` for the person being updated. 
- `(contains? X Y)` : Checks whether an object or hash-set, `X` contains a specific key (for objects) or value (for hash-sets), `Y`. 


To create a smart function, and attach that smart function to a rule for `wallet/name`, our transaction would look as follows:

```
[{
    "_id": "_fn$ownWallet",
    "name": "ownWallet?",
    "code": "SMART FUNCTION CODE HERE"
},
   {
    "_id": "_rule$editOwnWalletName",
    "id": "editOwnWalletName",
    "doc": "A cryptoUser can only edit their own wallet/name",
    "fns": ["_fn$ownWallet"],
    "ops": ["transact"],
    "collection": "wallet",
    "predicates":  ["wallet/name”],
}]
```

<div class="challenge">
<h3>Write a Smart Function!</h3>
<br/>
<p>Using the smart functions listed above, can you figure out how to create a smart function that checks whether the wallet being updated is owned by the user trying to update it?</p>
<p>Remember, if you get stuck, you can click on the "Get Solution" button to see the answer.</p>
</div>
<br/>
<br/>
